# mv-libnani1

./: .gitignore  ExtraMakefile  Makefile.am  configure.ac
doc/: nani1.1  nani1.3  nani1.texi
lib/: Makefile.am  nani1.c  nani1.h  nani1.pc.in
rpm/generic/: .gitignore  Makefile.am  nani.spec.in
src/: Makefile.am  main.c
